tests/invalid/Constant_Invalid_2.whiley
import * from whiley.lang.*

method main(System.Console sys) -> void:
    int a = Constants[5]
